--- a/gui.ini
+++ b/gui.ini
@@ -1,7 +1,7 @@
 [General]
 text=0
 value=0
-HWP_stepper_angle=160
+HWP_stepper_angle=90
 currentIndex=2
 
 [autoPanCheck]
@@ -9,11 +9,11 @@ text=Auto Pan Only
 checked=false
 
 [normYBlurSpin]
-text="0,00"
+text=0.00
 value=0
 
 [qt_spinbox_lineedit]
-text="1,92"
+text=500.0000
 
 [visibleOnlyCheck]
 text=Visible Data Only
@@ -28,14 +28,14 @@ text=Auto
 checked=true
 
 [minText]
-text=-30.59
+text=25.227
 
 [pico_n_captures]
 text=1
 value=1
 
 [fastScan_time_cutoff]
-text="0,0000000000"
+text=0.0000000000
 value=0
 
 [autoPercentSpin]
@@ -51,15 +51,15 @@ text=Auto
 checked=false
 
 [maxText]
-text=710.9
+text=14.829
 
 [invertCheck]
 text=Invert Axis
 checked=false
 
 [andorCameraExposure]
-text="0,02000"
-value=0.02
+text=2.00000
+value=2
 
 [downsampleCheck]
 text=Downsample
@@ -70,7 +70,7 @@ text=1x
 value=1
 
 [shamrockWavelength_to_set]
-text="400,00"
+text=400.00
 value=400
 
 [forgetTracesCheck]
@@ -93,11 +93,11 @@ text=Frame
 checked=false
 
 [shamrockWavelengthShift]
-text="0,00"
+text=0.00
 value=0
 
 [Pi_X_move_to]
-text="1,92"
+text=500.0000
 value=8
 
 [scan3D_maskStep]
@@ -105,11 +105,11 @@ text=2
 value=2
 
 [usbSpectr_integr_time]
-text="1,92"
+text=0.010
 value=0.01
 
 [usbSpectr_save_to]
-text=3648
+text=500.0000
 value=3648
 
 [shamrockGrating]
@@ -150,7 +150,7 @@ text=Power Spectrum (FFT)
 checked=false
 
 [calibr_start]
-text="0,00"
+text=500.0000
 value=0
 
 [n_meas_laser_spectra_step]
@@ -158,11 +158,11 @@ text=5
 value=5
 
 [Pi_Y_move_to]
-text="30,000"
+text=30.000
 value=30
 
 [HWP_rel_step]
-text="1,92"
+text=5.00
 value=5
 
 [xGridCheck]
@@ -178,7 +178,7 @@ text=X
 checked=true
 
 [normTBlurSpin]
-text="1,92"
+text=0.00
 value=0
 
 [n_meas_laser_spectra_FloatingWindow]
@@ -189,22 +189,22 @@ checked=false
 currentIndex=2
 
 [meas_laser_spectra_end]
-text="1,92"
+text=1200
 value=1200
 
 [pico_Trig_mode]
 currentIndex=0
 
 [shamrockWavelength]
-text="458,3333"
-value=458.3333
+text=400.0000
+value=400
 
 [scan3D_threshold_rel]
-text="0,0100"
+text=0.0100
 value=0.01
 
 [confParam_scan_end]
-text="80,00"
+text=500.0000
 value=80
 
 [Pi_Y_On]
@@ -212,7 +212,7 @@ text=Y
 checked=true
 
 [calibr_step]
-text="1,92"
+text=500.0000
 value=5
 
 [n_meas_laser_spectra_start]
@@ -220,7 +220,7 @@ text=800
 value=800
 
 [pico_ChA_offset]
-text="0,00"
+text=0.00
 value=0
 
 [normTimeRangeCheck]
@@ -238,7 +238,7 @@ value=900
 currentIndex=5
 
 [scanPolar_angle]
-text="1,92"
+text=360.00
 value=360
 
 [usbSpectr_from]
@@ -250,11 +250,11 @@ text=Live
 checked=false
 
 [HWP_stepper_step]
-text="0,00"
+text=0.00
 value=0
 
 [usbSpectr_save_from]
-text=0
+text=500.0000
 value=0
 
 [normROICheck]
@@ -262,7 +262,7 @@ text=ROI
 checked=false
 
 [rotPiezoStage_Step]
-text="10,00"
+text=10.00
 value=10
 
 [rotPiezoStage_wait]
@@ -274,14 +274,14 @@ text=MOCO_PMT
 checked=false
 
 [calibr_wavelength_step]
-text="1,92"
+text=500.0000
 value=1
 
 [scan1D_filePath]
 text=./data/scan1D
 
 [confParam_scan_step]
-text="1,92"
+text=0.500
 value=0.5
 
 [scan3D_path]
@@ -291,7 +291,7 @@ text=./data/scan
 text=./data/multiScan
 
 [pico_ChB_offset]
-text="0,00"
+text=0.00
 value=0
 
 [pico_AutoRange_min]
@@ -303,12 +303,12 @@ text="0,30"
 value=0.3
 
 [scan1D_start]
-text="1,92"
+text=20.00
 value=20
 
 [HWP_stepper_MoveTo]
-text="0,00"
-value=0
+text=140.00
+value=140
 
 [n_meas_laser_spectra_track_channel]
 currentIndex=0
@@ -321,7 +321,7 @@ value=39.863
 text=2e-9
 
 [shamrock_MOCO_limit]
-text="320,00"
+text=320.00
 value=320
 
 [usbSpectr_to]
@@ -337,14 +337,14 @@ text=Adaptive
 checked=true
 
 [calibr_wavelength_start]
-text="1,92"
+text=710
 value=710
 
 [pico_ChA_VRange]
 currentIndex=3
 
 [normXBlurSpin]
-text="0,00"
+text=0.00
 value=0
 
 [n_meas_laser_spectra_track_fast]
@@ -356,12 +356,12 @@ text="0,00"
 value=0
 
 [Pi_Z_move_to]
-text="1,92"
+text=38.000
 value=38
 
 [laserPower_internal]
-text="2,47"
-value=2.47
+text=2.48
+value=2.48
 
 [Scan3D_min_distance]
 text=1
@@ -372,11 +372,11 @@ text=track
 checked=true
 
 [meas_laser_spectra_step]
-text="1,92"
+text=10
 value=10
 
 [pico_TrigThreshold]
-text="0,020"
+text=0.020
 value=0.02
 
 [n_meas_laser_spectra_Z_interface_optim]
@@ -388,7 +388,7 @@ currentIndex=1
 
 [raw_data_preview]
 text=preview
-checked=true
+checked=false
 
 [meas_laser_spectra_track_fast]
 text=Fast
@@ -402,11 +402,11 @@ text="0,00"
 value=0
 
 [HWP_move_to_angle]
-text="1,92"
+text=100.0000
 value=100
 
 [fastScan_time_delay]
-text="0,0000000000"
+text=0.0000000000
 value=0
 
 [meas_laser_spectra_track]
@@ -418,8 +418,8 @@ text=WaitUntilReady
 checked=true
 
 [fastScan_time_calibr]
-text="10,9596105275"
-value=10.9596105275
+text=3.6283016290
+value=3.628301629
 
 [andorCameraLive]
 text=Live
@@ -429,7 +429,7 @@ checked=false
 text=0.0
 
 [confParam_scan_start]
-text="1,92"
+text=20.00
 value=20
 
 [Pi_Z_On]
@@ -437,7 +437,7 @@ text=Z
 checked=true
 
 [calibr_end]
-text="360,00"
+text=360.00
 value=360
 
 [n_meas_laser_spectra_end]
@@ -449,7 +449,7 @@ text=Wait
 checked=true
 
 [scan3D_maskSigma]
-text="0,90"
+text=0.90
 value=0.9
 
 [pico_AutoRange]
@@ -461,8 +461,8 @@ text=maskScan
 checked=false
 
 [scan3D_num_peaks]
-text=2
-value=2
+text=1
+value=1
 
 [laserShutter]
 text=Shutter
@@ -476,19 +476,19 @@ text="0,00"
 value=0
 
 [scan1D_step]
-text="0,300"
-value=0.3
+text=1.000
+value=1
 
 [shamrock_use_MOCO]
 text=ChangeFilterAt
 checked=false
 
 [mocoPosition]
-text=650000
-value=650000
+text=649936
+value=649936
 
 [DAQmx_shift]
-text="1,92"
+text=12
 value=12
 
 [pico_photon_counter_threshold]
@@ -499,15 +499,15 @@ text=PC
 checked=false
 
 [pm100Average]
-text=10
+text=500.0000
 value=10
 
 [scan1D_end]
-text="60,00"
-value=60
+text=70.00
+value=70
 
 [Pi_Velocity]
-text="1,92"
+text=10000.00
 value=10000
 
 [pico_AutoRange_max]
@@ -519,15 +519,15 @@ text=fit
 checked=true
 
 [scan3D_maskThreshold]
-text="60,000"
+text=60.000
 value=60
 
 [laserWavelength_to_set]
-text="1,92"
-value=1235
+text=1100
+value=1100
 
 [calibr_wavelength_end]
-text="1,92"
+text=711
 value=711
 
 [mocoSection]
@@ -549,8 +549,8 @@ currentIndex=0
 currentIndex=0
 
 [optim1step_n]
-text=7
-value=7
+text=3
+value=3
 
 [n_meas_laser_spectra_rescan2D]
 text=rescan2D
@@ -568,24 +568,24 @@ text=zCompensation
 checked=false
 
 [optim1step_zCompensationShift]
-text="9,131"
-value=9.131
+text=-8.782
+value=-8.782
 
 [nMeasLaserSpectra_Z_step]
-text="0,30"
+text=0.30
 value=0.3
 
 [nMeasLaserSpectra_step]
-text=5
-value=5
+text=20
+value=20
 
 [nMeasLaserSpectra_testPolar_step]
-text="10,00"
+text=10.00
 value=10
 
 [nMeasLaserSpectra_Z_interface]
-text="47,5729"
-value=47.5729
+text=65.6251
+value=65.6251
 
 [nMeasLaserSpectra_track]
 text=track
@@ -595,26 +595,26 @@ checked=true
 text=./data/multiScan
 
 [nMeasLaserSpectra_start]
-text=1250
-value=1250
+text=1200
+value=1200
 
 [nMeasLaserSpectra_rescan2D]
 text=rescan2D
-checked=false
+checked=true
 
 [nMeasLaserSpectra_track_channel]
-currentIndex=1
+currentIndex=0
 
 [nMeasLaserSpectra_Z_offset]
-text="1,92"
+text=0.00
 value=0
 
 [nMeasLaserSpectra_scanSpectraExp]
-text="0,03000"
-value=0.03
+text=0.01000
+value=0.01
 
 [nMeasLaserSpectra_testPolar_end]
-text="1,92"
+text=190.00
 value=190
 
 [nMeasLaserSpectra_Z_interface_fit]
@@ -627,14 +627,14 @@ checked=false
 
 [nMeasLaserSpectra_testPolar]
 text=TestPolarization
-checked=true
+checked=false
 
 [nMeasLaserSpectra_end]
 text=710
 value=710
 
 [nMeasLaserSpectra_Z_end]
-text="1,92"
+text=1.00
 value=1
 
 [nMeasLaserSpectra_Z_interface_optim]
@@ -646,15 +646,15 @@ text=FloatingWindow
 checked=false
 
 [nMeasLaserSpectra_testPolarFreq]
-text="1,92"
-value=3
+text=7
+value=7
 
 [nMeasLaserSpectra_Z_start]
-text="0,00"
+text=0.00
 value=0
 
 [nMeasLaserSpectra_testPolar_start]
-text="1,92"
+text=0.01
 value=0.01
 
 [nMeasLaserSpectra_testPolarMode]
@@ -663,3 +663,7 @@ currentIndex=0
 [nMeasLaserSpectra_MOCO_PMT]
 text=MOCO_PMT
 checked=false
+
+[nMeasLaserSpectra_rescan2D_freq]
+text=5
+value=5
