--- a/gui.ini
+++ b/gui.ini
@@ -1,8 +1,8 @@
 [General]
 text=0
 value=0
-HWP_stepper_angle=90
-currentIndex=2
+HWP_stepper_angle=80
+currentIndex=1
 
 [autoPanCheck]
 text=Auto Pan Only
@@ -13,7 +13,7 @@ text=0.00
 value=0
 
 [qt_spinbox_lineedit]
-text=500.0000
+text=10%
 
 [visibleOnlyCheck]
 text=Visible Data Only
@@ -28,11 +28,11 @@ text=Auto
 checked=true
 
 [minText]
-text=25.227
+text=58.373
 
 [pico_n_captures]
-text=1
-value=1
+text=7128
+value=7128
 
 [fastScan_time_cutoff]
 text=0.0000000000
@@ -51,15 +51,15 @@ text=Auto
 checked=false
 
 [maxText]
-text=14.829
+text=174.97
 
 [invertCheck]
 text=Invert Axis
 checked=false
 
 [andorCameraExposure]
-text=2.00000
-value=2
+text=0.10000
+value=0.1
 
 [downsampleCheck]
 text=Downsample
@@ -70,8 +70,8 @@ text=1x
 value=1
 
 [shamrockWavelength_to_set]
-text=400.00
-value=400
+text=3.00
+value=3
 
 [forgetTracesCheck]
 text=Forget hidden traces
@@ -97,7 +97,7 @@ text=0.00
 value=0
 
 [Pi_X_move_to]
-text=500.0000
+text=10
 value=8
 
 [scan3D_maskStep]
@@ -105,11 +105,11 @@ text=2
 value=2
 
 [usbSpectr_integr_time]
-text=0.010
+text=10
 value=0.01
 
 [usbSpectr_save_to]
-text=500.0000
+text=3648
 value=3648
 
 [shamrockGrating]
@@ -120,11 +120,11 @@ text=Clip to View
 checked=false
 
 [laserWavelength]
-text=1100
-value=1100
+text=710
+value=710
 
 [pico_samplingDuration]
-text=100e-6
+text=1.5e-06
 
 [logXCheck]
 text=Log X
@@ -150,7 +150,7 @@ text=Power Spectrum (FFT)
 checked=false
 
 [calibr_start]
-text=500.0000
+text=0.00
 value=0
 
 [n_meas_laser_spectra_step]
@@ -158,7 +158,7 @@ text=5
 value=5
 
 [Pi_Y_move_to]
-text=30.000
+text=10
 value=30
 
 [HWP_rel_step]
@@ -178,33 +178,33 @@ text=X
 checked=true
 
 [normTBlurSpin]
-text=0.00
-value=0
+text=9.00
+value=9
 
 [n_meas_laser_spectra_FloatingWindow]
 text=FloatingWindow
 checked=false
 
 [scan1D_axis]
-currentIndex=2
+currentIndex=4
 
 [meas_laser_spectra_end]
-text=1200
+text=10
 value=1200
 
 [pico_Trig_mode]
 currentIndex=0
 
 [shamrockWavelength]
-text=400.0000
-value=400
+text=354.1667
+value=354.1667
 
 [scan3D_threshold_rel]
-text=0.0100
-value=0.01
+text=0.1000
+value=0.1
 
 [confParam_scan_end]
-text=500.0000
+text=80.00
 value=80
 
 [Pi_Y_On]
@@ -212,7 +212,7 @@ text=Y
 checked=true
 
 [calibr_step]
-text=500.0000
+text=5.000
 value=5
 
 [n_meas_laser_spectra_start]
@@ -231,11 +231,11 @@ checked=false
 currentIndex=0
 
 [meas_laser_spectra_start]
-text=900
+text=10
 value=900
 
 [pico_ChB_VRange]
-currentIndex=5
+currentIndex=4
 
 [scanPolar_angle]
 text=360.00
@@ -254,7 +254,7 @@ text=0.00
 value=0
 
 [usbSpectr_save_from]
-text=500.0000
+text=0
 value=0
 
 [normROICheck]
@@ -274,7 +274,7 @@ text=MOCO_PMT
 checked=false
 
 [calibr_wavelength_step]
-text=500.0000
+text=10
 value=1
 
 [scan1D_filePath]
@@ -303,12 +303,12 @@ text="0,30"
 value=0.3
 
 [scan1D_start]
-text=20.00
-value=20
+text=0.00
+value=0
 
 [HWP_stepper_MoveTo]
-text=140.00
-value=140
+text=30.00
+value=30
 
 [n_meas_laser_spectra_track_channel]
 currentIndex=0
@@ -325,7 +325,7 @@ text=320.00
 value=320
 
 [usbSpectr_to]
-text=1600
+text=10
 value=1600
 
 [spinBox]
@@ -344,8 +344,8 @@ value=710
 currentIndex=3
 
 [normXBlurSpin]
-text=0.00
-value=0
+text=18.00
+value=18
 
 [n_meas_laser_spectra_track_fast]
 text=Fast
@@ -356,12 +356,12 @@ text="0,00"
 value=0
 
 [Pi_Z_move_to]
-text=38.000
+text=10
 value=38
 
 [laserPower_internal]
-text=2.48
-value=2.48
+text=1.99
+value=1.99
 
 [Scan3D_min_distance]
 text=1
@@ -402,8 +402,8 @@ text="0,00"
 value=0
 
 [HWP_move_to_angle]
-text=100.0000
-value=100
+text=50.0000
+value=50
 
 [fastScan_time_delay]
 text=0.0000000000
@@ -418,8 +418,8 @@ text=WaitUntilReady
 checked=true
 
 [fastScan_time_calibr]
-text=3.6283016290
-value=3.628301629
+text=10.2779580533
+value=10.2779580533
 
 [andorCameraLive]
 text=Live
@@ -429,7 +429,7 @@ checked=false
 text=0.0
 
 [confParam_scan_start]
-text=20.00
+text=10
 value=20
 
 [Pi_Z_On]
@@ -437,7 +437,7 @@ text=Z
 checked=true
 
 [calibr_end]
-text=360.00
+text=10
 value=360
 
 [n_meas_laser_spectra_end]
@@ -466,7 +466,7 @@ value=1
 
 [laserShutter]
 text=Shutter
-checked=false
+checked=true
 
 [andorCameraReadoutMode]
 currentIndex=0
@@ -476,16 +476,16 @@ text="0,00"
 value=0
 
 [scan1D_step]
-text=1.000
-value=1
+text=10
+value=2
 
 [shamrock_use_MOCO]
 text=ChangeFilterAt
 checked=false
 
 [mocoPosition]
-text=649936
-value=649936
+text=650000
+value=650000
 
 [DAQmx_shift]
 text=12
@@ -499,12 +499,12 @@ text=PC
 checked=false
 
 [pm100Average]
-text=500.0000
+text=10
 value=10
 
 [scan1D_end]
-text=70.00
-value=70
+text=180.00
+value=180
 
 [Pi_Velocity]
 text=10000.00
@@ -523,8 +523,8 @@ text=60.000
 value=60
 
 [laserWavelength_to_set]
-text=1100
-value=1100
+text=850
+value=850
 
 [calibr_wavelength_end]
 text=711
@@ -568,24 +568,24 @@ text=zCompensation
 checked=false
 
 [optim1step_zCompensationShift]
-text=-8.782
-value=-8.782
+text=2.217
+value=2.217
 
 [nMeasLaserSpectra_Z_step]
 text=0.30
 value=0.3
 
 [nMeasLaserSpectra_step]
-text=20
-value=20
+text=5
+value=5
 
 [nMeasLaserSpectra_testPolar_step]
 text=10.00
 value=10
 
 [nMeasLaserSpectra_Z_interface]
-text=65.6251
-value=65.6251
+text=49.6145
+value=49.6145
 
 [nMeasLaserSpectra_track]
 text=track
@@ -595,8 +595,8 @@ checked=true
 text=./data/multiScan
 
 [nMeasLaserSpectra_start]
-text=1200
-value=1200
+text=710
+value=710
 
 [nMeasLaserSpectra_rescan2D]
 text=rescan2D
@@ -610,12 +610,12 @@ text=0.00
 value=0
 
 [nMeasLaserSpectra_scanSpectraExp]
-text=0.01000
-value=0.01
+text=0.10000
+value=0.1
 
 [nMeasLaserSpectra_testPolar_end]
-text=190.00
-value=190
+text=230.00
+value=230
 
 [nMeasLaserSpectra_Z_interface_fit]
 text=fit
@@ -627,11 +627,11 @@ checked=false
 
 [nMeasLaserSpectra_testPolar]
 text=TestPolarization
-checked=false
+checked=true
 
 [nMeasLaserSpectra_end]
-text=710
-value=710
+text=1300
+value=1300
 
 [nMeasLaserSpectra_Z_end]
 text=1.00
@@ -646,16 +646,16 @@ text=FloatingWindow
 checked=false
 
 [nMeasLaserSpectra_testPolarFreq]
-text=7
-value=7
+text=5
+value=5
 
 [nMeasLaserSpectra_Z_start]
 text=0.00
 value=0
 
 [nMeasLaserSpectra_testPolar_start]
-text=0.01
-value=0.01
+text=30.00
+value=30
 
 [nMeasLaserSpectra_testPolarMode]
 currentIndex=0
@@ -665,5 +665,5 @@ text=MOCO_PMT
 checked=false
 
 [nMeasLaserSpectra_rescan2D_freq]
-text=5
-value=5
+text=3
+value=3
