--- a/gui.ini
+++ b/gui.ini
@@ -1,669 +1,681 @@
 [General]
-text=0
-value=0
-HWP_stepper_angle=80
-currentIndex=1
-
-[autoPanCheck]
-text=Auto Pan Only
-checked=false
-
-[normYBlurSpin]
-text=0.00
-value=0
-
-[qt_spinbox_lineedit]
-text=10%
-
-[visibleOnlyCheck]
-text=Visible Data Only
-checked=false
-
-[autoDownsampleCheck]
-text=Auto
-checked=true
-
-[autoPointsCheck]
-text=Auto
-checked=true
-
-[minText]
-text=58.373
-
-[pico_n_captures]
-text=7128
-value=7128
-
-[fastScan_time_cutoff]
-text=0.0000000000
-value=0
-
-[autoPercentSpin]
-text=100%
-value=100
-
-[yGridCheck]
-text=Show Y Grid
-checked=true
-
-[autoAlphaCheck]
-text=Auto
-checked=false
-
-[maxText]
-text=174.97
-
-[invertCheck]
-text=Invert Axis
-checked=false
-
-[andorCameraExposure]
-text=0.10000
-value=0.1
-
-[downsampleCheck]
-text=Downsample
-checked=false
-
-[downsampleSpin]
-text=1x
-value=1
-
-[shamrockWavelength_to_set]
-text=3.00
-value=3
-
-[forgetTracesCheck]
-text=Forget hidden traces
-checked=false
-
-[mouseCheck]
-text=Mouse Enabled
-checked=true
-
-[laserWavelength_ready]
-text=ready
-checked=true
-
-[linkCombo]
-currentIndex=0
-
-[normFrameCheck]
-text=Frame
-checked=false
-
-[shamrockWavelengthShift]
-text=0.00
-value=0
-
-[Pi_X_move_to]
-text=10
-value=8
-
-[scan3D_maskStep]
-text=2
-value=2
-
-[usbSpectr_integr_time]
-text=10
-value=0.01
-
-[usbSpectr_save_to]
-text=3648
-value=3648
-
-[shamrockGrating]
-currentIndex=0
-
-[clipToViewCheck]
-text=Clip to View
-checked=false
-
-[laserWavelength]
-text=710
-value=710
-
-[pico_samplingDuration]
-text=1.5e-06
-
-[logXCheck]
-text=Log X
-checked=false
-
-[maxTracesCheck]
-text=Max Traces:
-checked=false
-
-[pico_TrigSource]
-currentIndex=0
-
-[maxTracesSpin]
+HWP_stepper_angle=178
+currentIndex=-1
 text=0
 value=0
 
-[logYCheck]
-text=Log Y
-checked=false
+[DAQmx_shift]
+text=12
+value=12
 
-[fftCheck]
-text=Power Spectrum (FFT)
-checked=false
-
-[calibr_start]
-text=0.00
-value=0
-
-[n_meas_laser_spectra_step]
-text=5
-value=5
-
-[Pi_Y_move_to]
-text=10
-value=30
+[HWP_move_to_angle]
+text=50.0000
+value=50
 
 [HWP_rel_step]
 text=5.00
 value=5
 
-[xGridCheck]
-text=Show X Grid
-checked=true
+[HWP_stepper_MoveTo]
+text=30.00
+value=30
 
-[mocoMoveAbs_target]
+[HWP_stepper_step]
+text=10%
+value=0
+
+[HWP_stepper_wait]
+checked=true
+text=WaitUntilReady
+
+[Pi_Velocity]
+text=10%
+value=10
+
+[Pi_X_On]
+checked=true
+text=&X
+
+[Pi_X_move_to]
+text=8.000
+value=8
+
+[Pi_Y_On]
+checked=true
+text=&Y
+
+[Pi_Y_move_to]
+text=10%
+value=30
+
+[Pi_Z_On]
+checked=true
+text=&Z
+
+[Pi_Z_move_to]
+text=10%
+value=38
+
+[Pi_wait]
+checked=true
+text=&Wait
+
+[Scan3D_min_distance]
+text=1
+value=1
+
+[andorCameraExposure]
+text=10%
+value=0.1
+
+[andorCameraExposureAdaptive]
+checked=true
+text=Adaptive
+
+[andorCameraLive]
+checked=false
+text=Live
+
+[andorCameraReadoutMode]
+currentIndex=0
+
+[autoAlphaCheck]
+checked=false
+text=Auto
+
+[autoDownsampleCheck]
+checked=true
+text=Auto
+
+[autoPanCheck]
+checked=false
+text=Auto Pan Only
+
+[autoPercentSpin]
+text=100%
+value=100
+
+[autoPointsCheck]
+checked=true
+text=Auto
+
+[calibr_end]
+text=10%
+value=360
+
+[calibr_start]
+text=10%
+value=0
+
+[calibr_step]
+text=10%
+value=5
+
+[calibr_wavelength_end]
+text=10%
+value=711
+
+[calibr_wavelength_start]
+text=10%
+value=710
+
+[calibr_wavelength_step]
+text=1
+value=1
+
+[ccs200Exposure]
+text=10%
+value=0.1
+
+[ccs200ExtTrig]
+checked=false
+text=&ExtTrig
+
+[ccs200Live]
+checked=false
+text=li&ve
+
+[clipToViewCheck]
+checked=false
+text=Clip to View
+
+[confParam_scan_end]
+text=10%
+value=80
+
+[confParam_scan_start]
+text=20.00
+value=20
+
+[confParam_scan_step]
+text=10%
+value=0.5
+
+[downsampleCheck]
+checked=false
+text=Downsample
+
+[downsampleSpin]
+text=1x
+value=1
+
+[fastScan_pattern]
+currentIndex=0
+
+[fastScan_time_calibr]
+text=10%
+value=10.2779580533
+
+[fastScan_time_cutoff]
+text=10%
+value=0
+
+[fastScan_time_delay]
+text=0.0000000000
+value=0
+
+[fftCheck]
+checked=false
+text=Power Spectrum (FFT)
+
+[fileNameEdit]
+text=andor_HgLamp_400.csv
+
+[fileTypeCombo]
+currentIndex=0
+
+[forgetTracesCheck]
+checked=false
+text=Forget hidden traces
+
+[invertCheck]
+checked=false
+text=Invert Axis
+
+[laserPower_internal]
+text=2.59
+value=2.59
+
+[laserShutter]
+checked=false
+text=Shutter
+
+[laserWavelength]
+text=850
+value=850
+
+[laserWavelength_ready]
+checked=true
+text=ready
+
+[laserWavelength_to_set]
+text=10%
+value=850
+
+[linkCombo]
+currentIndex=0
+
+[logXCheck]
+checked=false
+text=Log X
+
+[logYCheck]
+checked=false
+text=Log Y
+
+[lookInCombo]
+currentIndex=0
+
+[maxText]
+text=174.97
+
+[maxTracesCheck]
+checked=false
+text=Max Traces:
+
+[maxTracesSpin]
 text=0
 value=0
 
-[Pi_X_On]
-text=X
-checked=true
-
-[normTBlurSpin]
-text=9.00
-value=9
-
-[n_meas_laser_spectra_FloatingWindow]
-text=FloatingWindow
-checked=false
-
-[scan1D_axis]
-currentIndex=4
-
 [meas_laser_spectra_end]
-text=10
+text=1200
 value=1200
 
-[pico_Trig_mode]
+[meas_laser_spectra_start]
+text=900
+value=900
+
+[meas_laser_spectra_step]
+text=10
+value=10
+
+[meas_laser_spectra_track]
+checked=false
+text=trac&k
+
+[meas_laser_spectra_track_channel]
 currentIndex=0
 
-[shamrockWavelength]
-text=354.1667
-value=354.1667
+[meas_laser_spectra_track_fast]
+checked=false
+text=F&ast
 
-[scan3D_threshold_rel]
-text=0.1000
+[minText]
+text=58.373
+
+[mocoMoveAbs_target]
+text=10%
+value=0
+
+[mocoPosition]
+text=650000
+value=650000
+
+[mocoSection]
+currentIndex=2
+
+[mouseCheck]
+checked=true
+text=Mouse Enabled
+
+[nMeasLaserSpectra_FloatingWindow]
+checked=false
+text=Floatin&gWindow
+
+[nMeasLaserSpectra_MOCO_PMT]
+checked=false
+text=MOCO_PMT
+
+[nMeasLaserSpectra_Z_end]
+text=1.00
+value=1
+
+[nMeasLaserSpectra_Z_interface]
+text=49.6145
+value=49.6145
+
+[nMeasLaserSpectra_Z_interface_fit]
+checked=true
+text=f&it
+
+[nMeasLaserSpectra_Z_interface_optim]
+checked=true
+text=&optimZ
+
+[nMeasLaserSpectra_Z_offset]
+text=10%
+value=0
+
+[nMeasLaserSpectra_Z_start]
+text=10%
+value=0
+
+[nMeasLaserSpectra_Z_step]
+text=10%
+value=0.3
+
+[nMeasLaserSpectra_end]
+text=1300
+value=1300
+
+[nMeasLaserSpectra_filePath]
+text=./data/multiScan
+
+[nMeasLaserSpectra_rescan2D]
+checked=true
+text=&rescan2D
+
+[nMeasLaserSpectra_rescan2D_freq]
+text=10%
+value=3
+
+[nMeasLaserSpectra_scanSpectraExp]
+text=10%
 value=0.1
 
-[confParam_scan_end]
-text=80.00
-value=80
+[nMeasLaserSpectra_start]
+text=710
+value=710
 
-[Pi_Y_On]
-text=Y
-checked=true
-
-[calibr_step]
-text=5.000
+[nMeasLaserSpectra_step]
+text=10%
 value=5
+
+[nMeasLaserSpectra_testPolar]
+checked=true
+text=T&estPolarization
+
+[nMeasLaserSpectra_testPolarFreq]
+text=10%
+value=5
+
+[nMeasLaserSpectra_testPolarMode]
+currentIndex=0
+
+[nMeasLaserSpectra_testPolar_end]
+text=230.00
+value=230
+
+[nMeasLaserSpectra_testPolar_start]
+text=30.00
+value=30
+
+[nMeasLaserSpectra_testPolar_step]
+text=10%
+value=10
+
+[nMeasLaserSpectra_track]
+checked=true
+text=&track
+
+[nMeasLaserSpectra_track_channel]
+currentIndex=0
+
+[nMeasLaserSpectra_track_fast]
+checked=false
+text=Fast
+
+[n_meas_laser_spectra_FloatingWindow]
+checked=false
+text=FloatingWindow
+
+[n_meas_laser_spectra_MOCO_PMT]
+checked=false
+text=MOCO_PMT
+
+[n_meas_laser_spectra_Path]
+text=./data/multiScan
+
+[n_meas_laser_spectra_Z_end]
+text="0,00"
+value=0
+
+[n_meas_laser_spectra_Z_interface]
+text="39,8630"
+value=39.863
+
+[n_meas_laser_spectra_Z_interface_fit]
+checked=true
+text=fit
+
+[n_meas_laser_spectra_Z_interface_optim]
+checked=true
+text=optimZ
+
+[n_meas_laser_spectra_Z_offset]
+text="0,00"
+value=0
+
+[n_meas_laser_spectra_Z_start]
+text="0,00"
+value=0
+
+[n_meas_laser_spectra_Z_step]
+text="0,30"
+value=0.3
+
+[n_meas_laser_spectra_end]
+text=1300
+value=1300
+
+[n_meas_laser_spectra_filePath]
+text=./data/multiScan_
+
+[n_meas_laser_spectra_rescan2D]
+checked=false
+text=rescan2D
+
+[n_meas_laser_spectra_scanSpectraExp]
+text="0,05000"
+value=0.05
 
 [n_meas_laser_spectra_start]
 text=800
 value=800
 
+[n_meas_laser_spectra_step]
+text=5
+value=5
+
+[n_meas_laser_spectra_track]
+checked=true
+text=track
+
+[n_meas_laser_spectra_track_channel]
+currentIndex=0
+
+[n_meas_laser_spectra_track_fast]
+checked=false
+text=Fast
+
+[normFrameCheck]
+checked=false
+text=Frame
+
+[normROICheck]
+checked=false
+text=ROI
+
+[normTBlurSpin]
+text=10%
+value=9
+
+[normTimeRangeCheck]
+checked=false
+text=Time range
+
+[normXBlurSpin]
+text=18.00
+value=18
+
+[normYBlurSpin]
+text=0.00
+value=0
+
+[optim1step_n]
+text=10%
+value=3
+
+[optim1step_zCompensation]
+checked=false
+text=&zCompensation
+
+[optim1step_zCompensationShift]
+text=10%
+value=2.217
+
+[pico_AutoRange]
+checked=true
+text=Au&to Level:
+
+[pico_AutoRange_max]
+text=10%
+value=-20000
+
+[pico_AutoRange_min]
+text=-200
+value=-200
+
+[pico_ChA_VRange]
+currentIndex=4
+
 [pico_ChA_offset]
 text=0.00
 value=0
 
-[normTimeRangeCheck]
-text=Time range
-checked=false
-
-[fastScan_pattern]
-currentIndex=0
-
-[meas_laser_spectra_start]
-text=10
-value=900
-
 [pico_ChB_VRange]
 currentIndex=4
 
-[scanPolar_angle]
-text=360.00
-value=360
-
-[usbSpectr_from]
-text=1400
-value=1400
-
-[pm100Live]
-text=Live
-checked=false
-
-[HWP_stepper_step]
+[pico_ChB_offset]
 text=0.00
 value=0
 
-[usbSpectr_save_from]
-text=0
-value=0
+[pico_TrigSource]
+currentIndex=2
 
-[normROICheck]
-text=ROI
+[pico_TrigThreshold]
+text=10%
+value=-0.33
+
+[pico_Trig_mode]
+currentIndex=0
+
+[pico_n_captures]
+text=10
+value=10
+
+[pico_photon_counter]
 checked=false
+text=&PC
+
+[pico_photon_counter_threshold]
+text=-0.001
+
+[pico_pretrig]
+text=0.0004
+
+[pico_sampleInterval]
+text=0.000001
+
+[pico_samplingDuration]
+text=0.007
+
+[pm100Average]
+text=10
+value=10
+
+[pm100Live]
+checked=false
+text=Live
+
+[powerCalibrMode]
+currentIndex=0
+
+[qt_spinbox_lineedit]
+text=10%
+
+[raw_data_preview]
+checked=false
+text=previe&w
+
+[readoutSources]
+currentIndex=5
 
 [rotPiezoStage_Step]
 text=10.00
 value=10
 
 [rotPiezoStage_wait]
+checked=false
 text=WaitUntilReady
-checked=false
 
-[n_meas_laser_spectra_MOCO_PMT]
-text=MOCO_PMT
-checked=false
-
-[calibr_wavelength_step]
-text=10
-value=1
-
-[scan1D_filePath]
-text=./data/scan1D
-
-[confParam_scan_step]
-text=0.500
-value=0.5
-
-[scan3D_path]
-text=./data/scan
-
-[n_meas_laser_spectra_Path]
-text=./data/multiScan
-
-[pico_ChB_offset]
-text=0.00
-value=0
-
-[pico_AutoRange_min]
-text=-200
-value=-200
-
-[n_meas_laser_spectra_Z_step]
-text="0,30"
-value=0.3
-
-[scan1D_start]
-text=0.00
-value=0
-
-[HWP_stepper_MoveTo]
-text=30.00
-value=30
-
-[n_meas_laser_spectra_track_channel]
+[scan1D_axis]
 currentIndex=0
-
-[n_meas_laser_spectra_Z_interface]
-text="39,8630"
-value=39.863
-
-[pico_sampleInterval]
-text=2e-9
-
-[shamrock_MOCO_limit]
-text=320.00
-value=320
-
-[usbSpectr_to]
-text=10
-value=1600
-
-[spinBox]
-text=0
-value=0
-
-[andorCameraExposureAdaptive]
-text=Adaptive
-checked=true
-
-[calibr_wavelength_start]
-text=710
-value=710
-
-[pico_ChA_VRange]
-currentIndex=3
-
-[normXBlurSpin]
-text=18.00
-value=18
-
-[n_meas_laser_spectra_track_fast]
-text=Fast
-checked=false
-
-[n_meas_laser_spectra_Z_end]
-text="0,00"
-value=0
-
-[Pi_Z_move_to]
-text=10
-value=38
-
-[laserPower_internal]
-text=1.99
-value=1.99
-
-[Scan3D_min_distance]
-text=1
-value=1
-
-[n_meas_laser_spectra_track]
-text=track
-checked=true
-
-[meas_laser_spectra_step]
-text=10
-value=10
-
-[pico_TrigThreshold]
-text=0.020
-value=0.02
-
-[n_meas_laser_spectra_Z_interface_optim]
-text=optimZ
-checked=true
-
-[readoutSources]
-currentIndex=1
-
-[raw_data_preview]
-text=preview
-checked=false
-
-[meas_laser_spectra_track_fast]
-text=Fast
-checked=false
-
-[meas_laser_spectra_track_channel]
-currentIndex=0
-
-[n_meas_laser_spectra_Z_start]
-text="0,00"
-value=0
-
-[HWP_move_to_angle]
-text=50.0000
-value=50
-
-[fastScan_time_delay]
-text=0.0000000000
-value=0
-
-[meas_laser_spectra_track]
-text=track
-checked=false
-
-[HWP_stepper_wait]
-text=WaitUntilReady
-checked=true
-
-[fastScan_time_calibr]
-text=10.2779580533
-value=10.2779580533
-
-[andorCameraLive]
-text=Live
-checked=false
-
-[pico_pretrig]
-text=0.0
-
-[confParam_scan_start]
-text=10
-value=20
-
-[Pi_Z_On]
-text=Z
-checked=true
-
-[calibr_end]
-text=10
-value=360
-
-[n_meas_laser_spectra_end]
-text=1300
-value=1300
-
-[Pi_wait]
-text=Wait
-checked=true
-
-[scan3D_maskSigma]
-text=0.90
-value=0.9
-
-[pico_AutoRange]
-text=Auto Level:
-checked=true
-
-[scan3D_byMask]
-text=maskScan
-checked=false
-
-[scan3D_num_peaks]
-text=1
-value=1
-
-[laserShutter]
-text=Shutter
-checked=true
-
-[andorCameraReadoutMode]
-currentIndex=0
-
-[n_meas_laser_spectra_Z_offset]
-text="0,00"
-value=0
-
-[scan1D_step]
-text=10
-value=2
-
-[shamrock_use_MOCO]
-text=ChangeFilterAt
-checked=false
-
-[mocoPosition]
-text=650000
-value=650000
-
-[DAQmx_shift]
-text=12
-value=12
-
-[pico_photon_counter_threshold]
-text=-0.001
-
-[pico_photon_counter]
-text=PC
-checked=false
-
-[pm100Average]
-text=10
-value=10
 
 [scan1D_end]
 text=180.00
 value=180
 
-[Pi_Velocity]
-text=10000.00
-value=10000
+[scan1D_filePath]
+text=./data/scan1D
 
-[pico_AutoRange_max]
-text=-20000
-value=-20000
+[scan1D_start]
+text=0.00
+value=0
 
-[n_meas_laser_spectra_Z_interface_fit]
-text=fit
-checked=true
+[scan1D_step]
+text=2.000
+value=2
+
+[scan3D_byMask]
+checked=false
+text=mas&kScan
+
+[scan3D_maskSigma]
+text=0.90
+value=0.9
+
+[scan3D_maskStep]
+text=2
+value=2
 
 [scan3D_maskThreshold]
 text=60.000
 value=60
 
-[laserWavelength_to_set]
-text=850
-value=850
+[scan3D_num_peaks]
+text=1
+value=1
 
-[calibr_wavelength_end]
-text=711
-value=711
+[scan3D_path]
+text=./data/scan
 
-[mocoSection]
-currentIndex=2
+[scan3D_threshold_rel]
+text=0.1000
+value=0.1
+
+[scanPolar_angle]
+text=360.00
+value=360
+
+[shamrockGrating]
+currentIndex=0
 
 [shamrockPort]
 currentIndex=0
 
-[n_meas_laser_spectra_filePath]
-text=./data/multiScan_
+[shamrockWavelength]
+text=354.1667
+value=354.1667
 
-[fileNameEdit]
-text=andor_HgLamp_400.csv
-
-[lookInCombo]
-currentIndex=0
-
-[fileTypeCombo]
-currentIndex=0
-
-[optim1step_n]
-text=3
-value=3
-
-[n_meas_laser_spectra_rescan2D]
-text=rescan2D
-checked=false
-
-[n_meas_laser_spectra_scanSpectraExp]
-text="0,05000"
-value=0.05
-
-[powerCalibrMode]
-currentIndex=0
-
-[optim1step_zCompensation]
-text=zCompensation
-checked=false
-
-[optim1step_zCompensationShift]
-text=2.217
-value=2.217
-
-[nMeasLaserSpectra_Z_step]
-text=0.30
-value=0.3
-
-[nMeasLaserSpectra_step]
-text=5
-value=5
-
-[nMeasLaserSpectra_testPolar_step]
-text=10.00
-value=10
-
-[nMeasLaserSpectra_Z_interface]
-text=49.6145
-value=49.6145
-
-[nMeasLaserSpectra_track]
-text=track
-checked=true
-
-[nMeasLaserSpectra_filePath]
-text=./data/multiScan
-
-[nMeasLaserSpectra_start]
-text=710
-value=710
-
-[nMeasLaserSpectra_rescan2D]
-text=rescan2D
-checked=true
-
-[nMeasLaserSpectra_track_channel]
-currentIndex=0
-
-[nMeasLaserSpectra_Z_offset]
-text=0.00
+[shamrockWavelengthShift]
+text=10%
 value=0
 
-[nMeasLaserSpectra_scanSpectraExp]
-text=0.10000
-value=0.1
+[shamrockWavelength_to_set]
+text=10%
+value=3
 
-[nMeasLaserSpectra_testPolar_end]
-text=230.00
-value=230
+[shamrock_MOCO_limit]
+text=10%
+value=320
 
-[nMeasLaserSpectra_Z_interface_fit]
-text=fit
-checked=true
-
-[nMeasLaserSpectra_track_fast]
-text=Fast
+[shamrock_use_MOCO]
 checked=false
+text=ChangeFilterAt
 
-[nMeasLaserSpectra_testPolar]
-text=TestPolarization
-checked=true
-
-[nMeasLaserSpectra_end]
-text=1300
-value=1300
-
-[nMeasLaserSpectra_Z_end]
-text=1.00
-value=1
-
-[nMeasLaserSpectra_Z_interface_optim]
-text=optimZ
-checked=true
-
-[nMeasLaserSpectra_FloatingWindow]
-text=FloatingWindow
-checked=false
-
-[nMeasLaserSpectra_testPolarFreq]
-text=5
-value=5
-
-[nMeasLaserSpectra_Z_start]
-text=0.00
+[spinBox]
+text=0
 value=0
 
-[nMeasLaserSpectra_testPolar_start]
-text=30.00
-value=30
+[usbSpectr_from]
+text=1400
+value=1400
 
-[nMeasLaserSpectra_testPolarMode]
-currentIndex=0
+[usbSpectr_integr_time]
+text=0.010
+value=0.01
 
-[nMeasLaserSpectra_MOCO_PMT]
-text=MOCO_PMT
+[usbSpectr_save_from]
+text=0
+value=0
+
+[usbSpectr_save_to]
+text=3648
+value=3648
+
+[usbSpectr_to]
+text=1600
+value=1600
+
+[visibleOnlyCheck]
 checked=false
+text=Visible Data Only
 
-[nMeasLaserSpectra_rescan2D_freq]
-text=3
-value=3
+[xGridCheck]
+checked=true
+text=Show X Grid
+
+[yGridCheck]
+checked=true
+text=Show Y Grid
