--- a/gui.ini
+++ b/gui.ini
@@ -1,681 +1,579 @@
 [General]
-HWP_stepper_angle=178
-currentIndex=-1
-text=0
-value=0
+HWP_stepper_angle=155.0000000000004
+text=255
+value=255
+currentIndex=1
 
-[DAQmx_shift]
-text=12
-value=12
-
-[HWP_move_to_angle]
-text=50.0000
-value=50
-
-[HWP_rel_step]
-text=5.00
-value=5
-
-[HWP_stepper_MoveTo]
-text=30.00
-value=30
-
-[HWP_stepper_step]
-text=10%
-value=0
-
-[HWP_stepper_wait]
-checked=true
-text=WaitUntilReady
-
-[Pi_Velocity]
-text=10%
-value=10
-
-[Pi_X_On]
-checked=true
-text=&X
-
-[Pi_X_move_to]
-text=8.000
-value=8
-
-[Pi_Y_On]
-checked=true
-text=&Y
-
-[Pi_Y_move_to]
-text=10%
-value=30
-
-[Pi_Z_On]
-checked=true
-text=&Z
-
-[Pi_Z_move_to]
-text=10%
-value=38
-
-[Pi_wait]
-checked=true
-text=&Wait
-
-[Scan3D_min_distance]
-text=1
-value=1
-
-[andorCameraExposure]
-text=10%
-value=0.1
-
-[andorCameraExposureAdaptive]
-checked=true
-text=Adaptive
-
-[andorCameraLive]
+[xGridCheck]
+text=Show X Grid
 checked=false
-text=Live
 
-[andorCameraReadoutMode]
-currentIndex=0
-
-[autoAlphaCheck]
-checked=false
-text=Auto
-
-[autoDownsampleCheck]
+[mouseCheck]
+text=Mouse Enabled
 checked=true
-text=Auto
-
-[autoPanCheck]
-checked=false
-text=Auto Pan Only
-
-[autoPercentSpin]
-text=100%
-value=100
-
-[autoPointsCheck]
-checked=true
-text=Auto
-
-[calibr_end]
-text=10%
-value=360
-
-[calibr_start]
-text=10%
-value=0
-
-[calibr_step]
-text=10%
-value=5
-
-[calibr_wavelength_end]
-text=10%
-value=711
-
-[calibr_wavelength_start]
-text=10%
-value=710
-
-[calibr_wavelength_step]
-text=1
-value=1
-
-[ccs200Exposure]
-text=10%
-value=0.1
-
-[ccs200ExtTrig]
-checked=false
-text=&ExtTrig
-
-[ccs200Live]
-checked=false
-text=li&ve
-
-[clipToViewCheck]
-checked=false
-text=Clip to View
-
-[confParam_scan_end]
-text=10%
-value=80
-
-[confParam_scan_start]
-text=20.00
-value=20
 
 [confParam_scan_step]
-text=10%
-value=0.5
+text=60.000
+value=0.1
 
-[downsampleCheck]
-checked=false
-text=Downsample
-
-[downsampleSpin]
-text=1x
-value=1
-
-[fastScan_pattern]
+[linkCombo]
 currentIndex=0
 
-[fastScan_time_calibr]
-text=10%
-value=10.2779580533
+[scan3D_num_peaks]
+text=4
+value=4
 
-[fastScan_time_cutoff]
-text=10%
-value=0
+[qt_spinbox_lineedit]
+text=60.000
+
+[nMeasLaserSpectra_scanSpectraExp]
+text=0.10000
+value=0.1
+
+[HWP_stepper_MoveTo]
+text=25.00
+value=25
+
+[pico_ChB_VRange]
+currentIndex=3
+
+[scan1D_step]
+text=60.000
+value=1
+
+[maxText]
+text=3465.8
+
+[maxTracesCheck]
+text=Max Traces:
+checked=false
+
+[autoDownsampleCheck]
+text=Auto
+checked=true
 
 [fastScan_time_delay]
 text=0.0000000000
 value=0
 
-[fftCheck]
-checked=false
-text=Power Spectrum (FFT)
-
-[fileNameEdit]
-text=andor_HgLamp_400.csv
-
-[fileTypeCombo]
-currentIndex=0
-
-[forgetTracesCheck]
-checked=false
-text=Forget hidden traces
-
-[invertCheck]
-checked=false
-text=Invert Axis
-
-[laserPower_internal]
-text=2.59
-value=2.59
-
-[laserShutter]
-checked=false
-text=Shutter
-
-[laserWavelength]
-text=850
-value=850
-
-[laserWavelength_ready]
+[autoPointsCheck]
+text=Auto
 checked=true
-text=ready
-
-[laserWavelength_to_set]
-text=10%
-value=850
-
-[linkCombo]
-currentIndex=0
-
-[logXCheck]
-checked=false
-text=Log X
-
-[logYCheck]
-checked=false
-text=Log Y
-
-[lookInCombo]
-currentIndex=0
-
-[maxText]
-text=174.97
-
-[maxTracesCheck]
-checked=false
-text=Max Traces:
-
-[maxTracesSpin]
-text=0
-value=0
-
-[meas_laser_spectra_end]
-text=1200
-value=1200
-
-[meas_laser_spectra_start]
-text=900
-value=900
-
-[meas_laser_spectra_step]
-text=10
-value=10
-
-[meas_laser_spectra_track]
-checked=false
-text=trac&k
-
-[meas_laser_spectra_track_channel]
-currentIndex=0
-
-[meas_laser_spectra_track_fast]
-checked=false
-text=F&ast
-
-[minText]
-text=58.373
-
-[mocoMoveAbs_target]
-text=10%
-value=0
-
-[mocoPosition]
-text=650000
-value=650000
 
 [mocoSection]
 currentIndex=2
 
-[mouseCheck]
-checked=true
-text=Mouse Enabled
-
-[nMeasLaserSpectra_FloatingWindow]
+[clipToViewCheck]
+text=Clip to View
 checked=false
-text=Floatin&gWindow
 
-[nMeasLaserSpectra_MOCO_PMT]
+[visibleOnlyCheck]
+text=Visible Data Only
 checked=false
-text=MOCO_PMT
-
-[nMeasLaserSpectra_Z_end]
-text=1.00
-value=1
-
-[nMeasLaserSpectra_Z_interface]
-text=49.6145
-value=49.6145
-
-[nMeasLaserSpectra_Z_interface_fit]
-checked=true
-text=f&it
-
-[nMeasLaserSpectra_Z_interface_optim]
-checked=true
-text=&optimZ
-
-[nMeasLaserSpectra_Z_offset]
-text=10%
-value=0
-
-[nMeasLaserSpectra_Z_start]
-text=10%
-value=0
-
-[nMeasLaserSpectra_Z_step]
-text=10%
-value=0.3
-
-[nMeasLaserSpectra_end]
-text=1300
-value=1300
-
-[nMeasLaserSpectra_filePath]
-text=./data/multiScan
-
-[nMeasLaserSpectra_rescan2D]
-checked=true
-text=&rescan2D
-
-[nMeasLaserSpectra_rescan2D_freq]
-text=10%
-value=3
-
-[nMeasLaserSpectra_scanSpectraExp]
-text=10%
-value=0.1
-
-[nMeasLaserSpectra_start]
-text=710
-value=710
-
-[nMeasLaserSpectra_step]
-text=10%
-value=5
-
-[nMeasLaserSpectra_testPolar]
-checked=true
-text=T&estPolarization
-
-[nMeasLaserSpectra_testPolarFreq]
-text=10%
-value=5
-
-[nMeasLaserSpectra_testPolarMode]
-currentIndex=0
-
-[nMeasLaserSpectra_testPolar_end]
-text=230.00
-value=230
-
-[nMeasLaserSpectra_testPolar_start]
-text=30.00
-value=30
-
-[nMeasLaserSpectra_testPolar_step]
-text=10%
-value=10
-
-[nMeasLaserSpectra_track]
-checked=true
-text=&track
-
-[nMeasLaserSpectra_track_channel]
-currentIndex=0
-
-[nMeasLaserSpectra_track_fast]
-checked=false
-text=Fast
-
-[n_meas_laser_spectra_FloatingWindow]
-checked=false
-text=FloatingWindow
-
-[n_meas_laser_spectra_MOCO_PMT]
-checked=false
-text=MOCO_PMT
-
-[n_meas_laser_spectra_Path]
-text=./data/multiScan
-
-[n_meas_laser_spectra_Z_end]
-text="0,00"
-value=0
-
-[n_meas_laser_spectra_Z_interface]
-text="39,8630"
-value=39.863
-
-[n_meas_laser_spectra_Z_interface_fit]
-checked=true
-text=fit
-
-[n_meas_laser_spectra_Z_interface_optim]
-checked=true
-text=optimZ
-
-[n_meas_laser_spectra_Z_offset]
-text="0,00"
-value=0
-
-[n_meas_laser_spectra_Z_start]
-text="0,00"
-value=0
-
-[n_meas_laser_spectra_Z_step]
-text="0,30"
-value=0.3
-
-[n_meas_laser_spectra_end]
-text=1300
-value=1300
-
-[n_meas_laser_spectra_filePath]
-text=./data/multiScan_
-
-[n_meas_laser_spectra_rescan2D]
-checked=false
-text=rescan2D
-
-[n_meas_laser_spectra_scanSpectraExp]
-text="0,05000"
-value=0.05
-
-[n_meas_laser_spectra_start]
-text=800
-value=800
-
-[n_meas_laser_spectra_step]
-text=5
-value=5
-
-[n_meas_laser_spectra_track]
-checked=true
-text=track
-
-[n_meas_laser_spectra_track_channel]
-currentIndex=0
-
-[n_meas_laser_spectra_track_fast]
-checked=false
-text=Fast
-
-[normFrameCheck]
-checked=false
-text=Frame
-
-[normROICheck]
-checked=false
-text=ROI
-
-[normTBlurSpin]
-text=10%
-value=9
-
-[normTimeRangeCheck]
-checked=false
-text=Time range
-
-[normXBlurSpin]
-text=18.00
-value=18
-
-[normYBlurSpin]
-text=0.00
-value=0
-
-[optim1step_n]
-text=10%
-value=3
-
-[optim1step_zCompensation]
-checked=false
-text=&zCompensation
-
-[optim1step_zCompensationShift]
-text=10%
-value=2.217
-
-[pico_AutoRange]
-checked=true
-text=Au&to Level:
-
-[pico_AutoRange_max]
-text=10%
-value=-20000
-
-[pico_AutoRange_min]
-text=-200
-value=-200
-
-[pico_ChA_VRange]
-currentIndex=4
-
-[pico_ChA_offset]
-text=0.00
-value=0
-
-[pico_ChB_VRange]
-currentIndex=4
-
-[pico_ChB_offset]
-text=0.00
-value=0
-
-[pico_TrigSource]
-currentIndex=2
-
-[pico_TrigThreshold]
-text=10%
-value=-0.33
-
-[pico_Trig_mode]
-currentIndex=0
 
 [pico_n_captures]
-text=10
-value=10
+text=60.000
+value=1
 
-[pico_photon_counter]
-checked=false
-text=&PC
-
-[pico_photon_counter_threshold]
-text=-0.001
-
-[pico_pretrig]
-text=0.0004
-
-[pico_sampleInterval]
-text=0.000001
-
-[pico_samplingDuration]
-text=0.007
-
-[pm100Average]
-text=10
-value=10
-
-[pm100Live]
-checked=false
-text=Live
-
-[powerCalibrMode]
+[shamrockGrating]
 currentIndex=0
 
-[qt_spinbox_lineedit]
-text=10%
-
-[raw_data_preview]
+[autoPanCheck]
+text=Auto Pan Only
 checked=false
-text=previe&w
 
-[readoutSources]
-currentIndex=5
-
-[rotPiezoStage_Step]
-text=10.00
-value=10
-
-[rotPiezoStage_wait]
-checked=false
-text=WaitUntilReady
-
-[scan1D_axis]
-currentIndex=0
-
-[scan1D_end]
-text=180.00
-value=180
-
-[scan1D_filePath]
-text=./data/scan1D
-
-[scan1D_start]
+[normXBlurSpin]
 text=0.00
 value=0
 
-[scan1D_step]
-text=2.000
-value=2
+[andorCameraExposure]
+text=3.00000
+value=3
 
-[scan3D_byMask]
+[nMeasLaserSpectra_Z_interface_fit]
+text=fit
+checked=true
+
+[yGridCheck]
+text=Show Y Grid
 checked=false
-text=mas&kScan
 
-[scan3D_maskSigma]
-text=0.90
-value=0.9
-
-[scan3D_maskStep]
-text=2
-value=2
-
-[scan3D_maskThreshold]
-text=60.000
-value=60
-
-[scan3D_num_peaks]
-text=1
-value=1
-
-[scan3D_path]
-text=./data/scan
-
-[scan3D_threshold_rel]
-text=0.1000
-value=0.1
+[normFrameCheck]
+text=Frame
+checked=false
 
 [scanPolar_angle]
 text=360.00
 value=360
 
-[shamrockGrating]
-currentIndex=0
-
-[shamrockPort]
-currentIndex=0
-
-[shamrockWavelength]
-text=354.1667
-value=354.1667
-
-[shamrockWavelengthShift]
-text=10%
+[mocoMoveAbs_target]
+text=0
 value=0
 
-[shamrockWavelength_to_set]
-text=10%
-value=3
+[autoPercentSpin]
+text=100%
+value=100
 
-[shamrock_MOCO_limit]
-text=10%
-value=320
-
-[shamrock_use_MOCO]
+[logXCheck]
+text=Log X
 checked=false
-text=ChangeFilterAt
+
+[invertCheck]
+text=Invert Axis
+checked=false
+
+[fftCheck]
+text=Power Spectrum (FFT)
+checked=false
+
+[pico_sampleInterval]
+text=2e-9
+
+[scan1D_start]
+text=0.00
+value=0
+
+[minText]
+text=0
+
+[autoAlphaCheck]
+text=Auto
+checked=false
+
+[pico_TrigThreshold]
+text=0.020
+value=0.02
+
+[pico_ChA_VRange]
+currentIndex=2
+
+[maxTracesSpin]
+text=0
+value=0
+
+[downsampleSpin]
+text=1x
+value=1
+
+[mocoPosition]
+text=650000
+value=650000
+
+[HWP_move_to_angle]
+text=30.0000
+value=30
+
+[nMeasLaserSpectra_filePath]
+text=./data/multiScan
+
+[pico_samplingDuration]
+text=15e-6
+
+[laserWavelength]
+text=900
+value=900
+
+[Pi_Y_On]
+text=Y
+checked=true
+
+[downsampleCheck]
+text=Downsample
+checked=false
+
+[forgetTracesCheck]
+text=Forget hidden traces
+checked=false
+
+[nMeasLaserSpectra_rescan2D]
+text=rescan2D
+checked=true
+
+[scan3D_threshold_rel]
+text=0.0100
+value=0.01
+
+[nMeasLaserSpectra_testPolar_start]
+text=115.00
+value=115
+
+[HWP_stepper_wait]
+text=WaitUntilReady
+checked=true
+
+[Pi_wait]
+text=Wait
+checked=true
+
+[scan1D_axis]
+currentIndex=2
+
+[pico_ChA_offset]
+text=0.00
+value=0
+
+[nMeasLaserSpectra_step]
+text=10
+value=10
+
+[shamrockWavelength]
+text=375.0000
+value=375
+
+[normTBlurSpin]
+text=60.000
+value=0
+
+[normTimeRangeCheck]
+text=Time range
+checked=false
+
+[fastScan_time_calibr]
+text=7.9359644190
+value=7.935964419
+
+[logYCheck]
+text=Log Y
+checked=false
+
+[meas_laser_spectra_end]
+text=1300
+value=1300
+
+[Pi_Z_On]
+text=Z
+checked=true
+
+[optim1step_zCompensationShift]
+text=-1.667
+value=-1.667
+
+[Pi_Z_move_to]
+text=50.000
+value=50
+
+[Pi_Velocity]
+text=10000.00
+value=10000
+
+[nMeasLaserSpectra_track]
+text=track
+checked=true
+
+[pm100Live]
+text=Live
+checked=false
+
+[normROICheck]
+text=ROI
+checked=false
+
+[andorCameraExposureAdaptive]
+text=Adaptive
+checked=true
+
+[scan3D_path]
+text=./data/scan
+
+[calibr_wavelength_end]
+text=60.000
+value=1300
+
+[calibr_step]
+text=1.000
+value=1
+
+[ccs200ExtTrig]
+text=ExtTrig
+checked=false
+
+[nMeasLaserSpectra_track_channel]
+currentIndex=0
+
+[scan3D_maskThreshold]
+text=60.000
+value=60
+
+[meas_laser_spectra_start]
+text=60.000
+value=850
+
+[nMeasLaserSpectra_testPolar_step]
+text=8.00
+value=8
+
+[HWP_stepper_step]
+text=0.00
+value=0
+
+[confParam_scan_start]
+text=60.000
+value=0
 
 [spinBox]
 text=0
 value=0
 
-[usbSpectr_from]
-text=1400
-value=1400
+[nMeasLaserSpectra_start]
+text=1150
+value=1150
 
-[usbSpectr_integr_time]
+[laserShutter]
+text=Shutter
+checked=true
+
+[pico_photon_counter]
+text=PC
+checked=false
+
+[pico_AutoRange_max]
+text=60.000
+value=-20000
+
+[DAQmx_shift]
+text=12
+value=12
+
+[normYBlurSpin]
+text=60.000
+value=0
+
+[confParam_scan_end]
+text=60.000
+value=50
+
+[scan1D_filePath]
+text=./data/scan1D-NP4
+
+[pico_photon_counter_threshold]
+text=-0.001
+
+[pico_Trig_mode]
+currentIndex=0
+
+[meas_laser_spectra_track]
+text=track
+checked=false
+
+[nMeasLaserSpectra_rescan2D_freq]
+text=9
+value=9
+
+[nMeasLaserSpectra_MOCO_PMT]
+text=MOCO_PMT
+checked=false
+
+[laserWavelength_ready]
+text=ready
+checked=true
+
+[scan3D_maskStep]
+text=4
+value=4
+
+[raw_data_preview]
+text=preview
+checked=true
+
+[shamrock_MOCO_limit]
+text=320.00
+value=320
+
+[ccs200Exposure]
 text=0.010
 value=0.01
 
-[usbSpectr_save_from]
-text=0
+[nMeasLaserSpectra_Z_step]
+text=0.30
+value=0.3
+
+[scan1D_end]
+text=100.00
+value=100
+
+[readoutSources]
+currentIndex=1
+
+[shamrockWavelength_to_set]
+text=400.00
+value=400
+
+[laserPower_internal]
+text=2.71
+value=2.71
+
+[nMeasLaserSpectra_Z_interface]
+text=55.2621
+value=55.2621
+
+[ccs200Live]
+text=live
+checked=false
+
+[shamrockWavelengthShift]
+text=60.000
 value=0
 
-[usbSpectr_save_to]
-text=3648
-value=3648
+[nMeasLaserSpectra_Z_end]
+text=1.00
+value=1
 
-[usbSpectr_to]
-text=1600
-value=1600
+[Pi_Y_move_to]
+text=50.000
+value=50
 
-[visibleOnlyCheck]
+[meas_laser_spectra_track_channel]
+currentIndex=0
+
+[HWP_rel_step]
+text=5.00
+value=5
+
+[pico_AutoRange]
+text=Auto Level:
+checked=true
+
+[calibr_start]
+text=60.000
+value=0
+
+[andorCameraLive]
+text=Live
 checked=false
-text=Visible Data Only
 
-[xGridCheck]
+[nMeasLaserSpectra_Z_interface_optim]
+text=optimZ
 checked=true
-text=Show X Grid
 
-[yGridCheck]
+[fastScan_pattern]
+currentIndex=0
+
+[meas_laser_spectra_step]
+text=60.000
+value=1
+
+[Scan3D_min_distance]
+text=60.000
+value=1
+
+[optim1step_zCompensation]
+text=zCompensation
+checked=false
+
+[nMeasLaserSpectra_testPolar]
+text=TestPolarization
+checked=false
+
+[pico_TrigSource]
+currentIndex=0
+
+[nMeasLaserSpectra_track_fast]
+text=Fast
+checked=false
+
+[nMeasLaserSpectra_testPolarMode]
+currentIndex=0
+
+[calibr_wavelength_step]
+text=60.000
+value=1
+
+[nMeasLaserSpectra_Z_start]
+text=0.00
+value=0
+
+[calibr_end]
+text=360.00
+value=360
+
+[andorCameraReadoutMode]
+currentIndex=0
+
+[scan3D_maskSigma]
+text=60.000
+value=2
+
+[scan3D_byMask]
+text=maskScan
 checked=true
-text=Show Y Grid
+
+[nMeasLaserSpectra_testPolar_end]
+text=300.00
+value=300
+
+[optim1step_n]
+text=60.000
+value=3
+
+[Pi_X_On]
+text=X
+checked=true
+
+[Pi_X_move_to]
+text=50.000
+value=50
+
+[powerCalibrMode]
+currentIndex=0
+
+[nMeasLaserSpectra_end]
+text=710
+value=710
+
+[shamrock_use_MOCO]
+text=ChangeFilterAt
+checked=false
+
+[fastScan_time_cutoff]
+text=60.000
+value=0
+
+[meas_laser_spectra_track_fast]
+text=Fast
+checked=false
+
+[pico_AutoRange_min]
+text=60.000
+value=-200
+
+[pico_ChB_offset]
+text=60.000
+value=0
+
+[pm100Average]
+text=60.000
+value=100
+
+[calibr_wavelength_start]
+text=850
+value=850
+
+[nMeasLaserSpectra_Z_offset]
+text=0.00
+value=0
+
+[pico_pretrig]
+text=0.0
+
+[nMeasLaserSpectra_testPolarFreq]
+text=15
+value=15
+
+[rotPiezoStage_wait]
+text=WaitUntilReady
+checked=false
+
+[rotPiezoStage_Step]
+text=10.00
+value=10
+
+[nMeasLaserSpectra_FloatingWindow]
+text=FloatingWindow
+checked=false
+
+[shamrockPort]
+currentIndex=0
+
+[laserWavelength_to_set]
+text=900
+value=900
