--- a/gui.ini
+++ b/gui.ini
@@ -1,8 +1,8 @@
 [General]
-HWP_stepper_angle=155.0000000000004
+HWP_stepper_angle=0
 text=255
 value=255
-currentIndex=1
+currentIndex=2
 
 [xGridCheck]
 text=Show X Grid
@@ -13,8 +13,8 @@ text=Mouse Enabled
 checked=true
 
 [confParam_scan_step]
-text=60.000
-value=0.1
+text=1.000
+value=1
 
 [linkCombo]
 currentIndex=0
@@ -24,25 +24,25 @@ text=4
 value=4
 
 [qt_spinbox_lineedit]
-text=60.000
+text=1300
 
 [nMeasLaserSpectra_scanSpectraExp]
 text=0.10000
 value=0.1
 
 [HWP_stepper_MoveTo]
-text=25.00
-value=25
+text=1300
+value=75
 
 [pico_ChB_VRange]
-currentIndex=3
+currentIndex=4
 
 [scan1D_step]
-text=60.000
+text=1.000
 value=1
 
 [maxText]
-text=3465.8
+text=61.093
 
 [maxTracesCheck]
 text=Max Traces:
@@ -72,7 +72,7 @@ text=Visible Data Only
 checked=false
 
 [pico_n_captures]
-text=60.000
+text=1
 value=1
 
 [shamrockGrating]
@@ -83,12 +83,12 @@ text=Auto Pan Only
 checked=false
 
 [normXBlurSpin]
-text=0.00
+text=1300
 value=0
 
 [andorCameraExposure]
-text=3.00000
-value=3
+text=1300
+value=0.01
 
 [nMeasLaserSpectra_Z_interface_fit]
 text=fit
@@ -103,7 +103,7 @@ text=Frame
 checked=false
 
 [scanPolar_angle]
-text=360.00
+text=1300
 value=360
 
 [mocoMoveAbs_target]
@@ -134,7 +134,7 @@ text=0.00
 value=0
 
 [minText]
-text=0
+text=-1.3359e-06
 
 [autoAlphaCheck]
 text=Auto
@@ -160,8 +160,8 @@ text=650000
 value=650000
 
 [HWP_move_to_angle]
-text=30.0000
-value=30
+text=40.0000
+value=40
 
 [nMeasLaserSpectra_filePath]
 text=./data/multiScan
@@ -170,8 +170,8 @@ text=./data/multiScan
 text=15e-6
 
 [laserWavelength]
-text=900
-value=900
+text=1300
+value=1300
 
 [Pi_Y_On]
 text=Y
@@ -190,7 +190,7 @@ text=rescan2D
 checked=true
 
 [scan3D_threshold_rel]
-text=0.0100
+text=1300
 value=0.01
 
 [nMeasLaserSpectra_testPolar_start]
@@ -217,11 +217,11 @@ text=10
 value=10
 
 [shamrockWavelength]
-text=375.0000
-value=375
+text=1300
+value=450
 
 [normTBlurSpin]
-text=60.000
+text=0.00
 value=0
 
 [normTimeRangeCheck]
@@ -229,7 +229,7 @@ text=Time range
 checked=false
 
 [fastScan_time_calibr]
-text=7.9359644190
+text=1300
 value=7.935964419
 
 [logYCheck]
@@ -249,7 +249,7 @@ text=-1.667
 value=-1.667
 
 [Pi_Z_move_to]
-text=50.000
+text=1300
 value=50
 
 [Pi_Velocity]
@@ -276,12 +276,12 @@ checked=true
 text=./data/scan
 
 [calibr_wavelength_end]
-text=60.000
+text=1300
 value=1300
 
 [calibr_step]
-text=1.000
-value=1
+text=3.000
+value=3
 
 [ccs200ExtTrig]
 text=ExtTrig
@@ -291,11 +291,11 @@ checked=false
 currentIndex=0
 
 [scan3D_maskThreshold]
-text=60.000
+text=1300
 value=60
 
 [meas_laser_spectra_start]
-text=60.000
+text=1300
 value=850
 
 [nMeasLaserSpectra_testPolar_step]
@@ -303,11 +303,11 @@ text=8.00
 value=8
 
 [HWP_stepper_step]
-text=0.00
+text=1300
 value=0
 
 [confParam_scan_start]
-text=60.000
+text=0.00
 value=0
 
 [spinBox]
@@ -320,30 +320,30 @@ value=1150
 
 [laserShutter]
 text=Shutter
-checked=true
+checked=false
 
 [pico_photon_counter]
 text=PC
 checked=false
 
 [pico_AutoRange_max]
-text=60.000
+text=-20000
 value=-20000
 
 [DAQmx_shift]
-text=12
+text=1300
 value=12
 
 [normYBlurSpin]
-text=60.000
+text=1300
 value=0
 
 [confParam_scan_end]
-text=60.000
-value=50
+text=70.00
+value=70
 
 [scan1D_filePath]
-text=./data/scan1D-NP4
+text=./data/scan1D
 
 [pico_photon_counter_threshold]
 text=-0.001
@@ -368,7 +368,7 @@ text=ready
 checked=true
 
 [scan3D_maskStep]
-text=4
+text=1300
 value=4
 
 [raw_data_preview]
@@ -376,11 +376,11 @@ text=preview
 checked=true
 
 [shamrock_MOCO_limit]
-text=320.00
+text=1300
 value=320
 
 [ccs200Exposure]
-text=0.010
+text=1300
 value=0.01
 
 [nMeasLaserSpectra_Z_step]
@@ -388,19 +388,19 @@ text=0.30
 value=0.3
 
 [scan1D_end]
-text=100.00
+text=1300
 value=100
 
 [readoutSources]
-currentIndex=1
+currentIndex=2
 
 [shamrockWavelength_to_set]
 text=400.00
 value=400
 
 [laserPower_internal]
-text=2.71
-value=2.71
+text=1.60
+value=1.6
 
 [nMeasLaserSpectra_Z_interface]
 text=55.2621
@@ -411,7 +411,7 @@ text=live
 checked=false
 
 [shamrockWavelengthShift]
-text=60.000
+text=1300
 value=0
 
 [nMeasLaserSpectra_Z_end]
@@ -419,7 +419,7 @@ text=1.00
 value=1
 
 [Pi_Y_move_to]
-text=50.000
+text=1300
 value=50
 
 [meas_laser_spectra_track_channel]
@@ -434,8 +434,8 @@ text=Auto Level:
 checked=true
 
 [calibr_start]
-text=60.000
-value=0
+text=25.00
+value=25
 
 [andorCameraLive]
 text=Live
@@ -449,11 +449,11 @@ checked=true
 currentIndex=0
 
 [meas_laser_spectra_step]
-text=60.000
+text=1300
 value=1
 
 [Scan3D_min_distance]
-text=60.000
+text=1300
 value=1
 
 [optim1step_zCompensation]
@@ -475,22 +475,22 @@ checked=false
 currentIndex=0
 
 [calibr_wavelength_step]
-text=60.000
-value=1
+text=5
+value=5
 
 [nMeasLaserSpectra_Z_start]
 text=0.00
 value=0
 
 [calibr_end]
-text=360.00
-value=360
+text=60.00
+value=60
 
 [andorCameraReadoutMode]
 currentIndex=0
 
 [scan3D_maskSigma]
-text=60.000
+text=2.00
 value=2
 
 [scan3D_byMask]
@@ -502,7 +502,7 @@ text=300.00
 value=300
 
 [optim1step_n]
-text=60.000
+text=3
 value=3
 
 [Pi_X_On]
@@ -525,7 +525,7 @@ text=ChangeFilterAt
 checked=false
 
 [fastScan_time_cutoff]
-text=60.000
+text=0.0000000000
 value=0
 
 [meas_laser_spectra_track_fast]
@@ -533,20 +533,20 @@ text=Fast
 checked=false
 
 [pico_AutoRange_min]
-text=60.000
+text=-200
 value=-200
 
 [pico_ChB_offset]
-text=60.000
+text=0.00
 value=0
 
 [pm100Average]
-text=60.000
-value=100
+text=10
+value=10
 
 [calibr_wavelength_start]
-text=850
-value=850
+text=710
+value=710
 
 [nMeasLaserSpectra_Z_offset]
 text=0.00
@@ -564,7 +564,7 @@ text=WaitUntilReady
 checked=false
 
 [rotPiezoStage_Step]
-text=10.00
+text=1300
 value=10
 
 [nMeasLaserSpectra_FloatingWindow]
@@ -575,5 +575,9 @@ checked=false
 currentIndex=0
 
 [laserWavelength_to_set]
-text=900
-value=900
+text=1300
+value=1300
+
+[confParam_scan_BG]
+text=0.00
+value=0
